--- a/service.yaml
+++ b/service.yaml
@@ -2,7 +2,7 @@ kind: Service
 apiVersion: v1
 metadata:
   name: gradio-service
-  namespace: ic-shared-llm
+  namespace: my-ic-shared-llm
   labels:
     app: gradio
 spec:
